--- a/stages/Dockerfile
+++ b/stages/Dockerfile
@@ -1,10 +1,10 @@
 FROM golang:1.15.5-alpine as builder
 WORKDIR /opt/data1
 ADD . /opt/data1
-go build -ldflags "-s -w" -o goaws
+CMD go build -ldflags "-s -w" -o goaws
 
-FROM alpine: 3.12
+FROM alpine:3.12 as deployer
 WORKDIR /opt/data1
-COPY --from=builder /opt/data1/* /opt/data1/*
-RUN chmod +x go-aws
+COPY --from=builder /opt/data1/goaws /opt/data1/
+RUN chmod +x goaws
 CMD ["./goaws"]
