--- a/stages/manifests/elasticachelogetler-prod.yaml
+++ b/stages/manifests/elasticachelogetler-prod.yaml
@@ -1,19 +1,19 @@
 ---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: elasticachelogetler-conf
-data:
-  config.yaml: |
-    aws:
-      AWS_ACCESS_KEY_ID: ""
-      AWS_SECRET_ACCESS_KEY: ""
-      AWS_REGION: ""
-    redis:
-      slowlog_num: 128
-    es:
-      address: "http://35.245.212.43:9200"
-      index: "redis-slowlog" # 索引
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: elasticachelogetler-conf
+# data:
+#   config.yaml: |
+#     aws:
+#       AWS_ACCESS_KEY_ID: ""
+#       AWS_SECRET_ACCESS_KEY: ""
+#       AWS_REGION: ""
+#     redis:
+#       slowlog_num: 128
+#     es:
+#       address: "http://IP:PORT"
+#       index: "redis-slowlog" # 索引
 ---
 apiVersion: batch/v1beta1
 kind: CronJob
