--- a/stages/manifests/elasticachelogetler-cron-prod.yaml
+++ b/stages/manifests/elasticachelogetler-cron-prod.yaml
@@ -33,9 +33,7 @@ spec:
             # - -c
             # - date; echo Hello from the Kubernetes cluster
             volumeMounts:
-              - name: fish-tracking-front-conf-prod
-                mountPath: /etc/nginx/conf.d
-              - name: elasticachelogetler-conf
+              - name: elasticachelogetler-conf-prod
                 mountPath: /opt/data1/.config.yaml
                 subPath: .config.yaml
           restartPolicy: OnFailure
@@ -43,10 +41,10 @@ spec:
             # - name: elasticachelogetler-cron-log-prod
             #   hostPath:
             #     path: /opt/data1/logs/elasticachelogetler-cron/prod/
-          - name: elasticachelogetler-conf
+          - name: elasticachelogetler-conf-prod
             configMap:
               name: elasticachelogetler-conf
               items:
                 - key: config.yaml
-                  path: config.yaml
+                  path: .config.yaml
         
